--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -31,6 +31,7 @@ workflow_path: "method-greenfield.yaml"
 workflow_status:
     # Phase 0: Discovery (Optional)
     brainstorm-project: docs/brainstorming-session-results-Wednesday, 12 November 2025.md
+    research: docs/research-technical-Wednesday, 12 November 2025.md
     product-brief: optional
 
     # Phase 1: Planning
