ux design spec and mockup

--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -38,7 +38,7 @@ workflow_status:
     # Phase 1: Planning
     prd: docs/PRD.md
     validate-prd: docs/validation-report-20251115T120000Z.md
-    create-design: conditional
+    create-design: docs/ux-design-specification.md
 
     # Phase 2: Solutioning
     create-architecture: required
