updated epics after creating architecture

--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -42,6 +42,7 @@ workflow_status:
 
     # Phase 2: Solutioning
     create-architecture: docs/architecture.md
+    create-epics-and-stories: docs/epics.md
     validate-architecture: optional
     solutioning-gate-check: required
 
