--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -43,8 +43,8 @@ workflow_status:
     # Phase 2: Solutioning
     create-architecture: docs/architecture.md
     create-epics-and-stories: docs/epics.md
-    validate-architecture: optional
-    solutioning-gate-check: required
+    validate-architecture: docs/validation-reports/validation-report-architecture-20251207-corrected.md
+    implementation-readiness: docs/implementation-readiness-report-Sunday, 7 December 2025.md
 
     # Phase 3: Implementation
     sprint-planning: required
