--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -47,4 +47,4 @@ workflow_status:
     implementation-readiness: docs/implementation-readiness-report-Sunday, 7 December 2025.md
 
     # Phase 3: Implementation
-    sprint-planning: required
+    sprint-planning: docs/sprint-artifacts/sprint-status.yaml
