--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -46,7 +46,7 @@ development_status:
   epic-1-retrospective: optional
 
   # Epic 2: Core Conversational Experience & RAG Pipeline
-  epic-2: backlog
+  epic-2: contexted
   2-1-implement-documentation-ingestion-pipeline: backlog
   2-2-a-implement-core-chat-interface: backlog
   2-2-b-implement-desktop-three-column-responsive-layout: backlog
