--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -57,7 +57,7 @@ development_status:
   epic-2-retrospective: optional
 
   # Epic 3: User Context & Personalization
-  epic-3: backlog
+  epic-3: contexted
   3-1-implement-role-selection-ui: backlog
   3-2-pass-user-role-to-backend: backlog
   3-3-incorporate-user-role-into-rag-prompt: backlog
