--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -36,7 +36,7 @@ story_location: "docs/sprint-artifacts"
 development_status:
   # Epic 1: Project Foundation & Deployment Pipeline
   epic-1: contexted
-  1-1-initialize-project-repositories-and-core-structure: backlog
+  1-1-initialize-project-repositories-and-core-structure: drafted
   1-2-configure-frontend-development-environment: backlog
   1-3-configure-backend-development-environment: backlog
   1-4-implement-basic-ci-cd-for-frontend-vercel: backlog
