--- a/.bmad/bmm/workflows/4-implementation/create-story/workflow.yaml
+++ b/.bmad/bmm/workflows/4-implementation/create-story/workflow.yaml
@@ -19,7 +19,7 @@ validation: "{installed_path}/checklist.md"
 
 # Variables and inputs
 variables:
-  sprint_status: "{sprint_artifacts}/sprint-status.yaml || {output_folder}/sprint-status.yaml" # Primary source for story tracking
+  sprint_status: "{project-root}/docs/sprint-artifacts/sprint-status.yaml" # Primary source for story tracking
   epics_file: "{output_folder}/epics.md" # Preferred source for epic/story breakdown
   prd_file: "{output_folder}/PRD.md" # Fallback for requirements
   architecture_file: "{output_folder}/architecture.md" # Optional architecture context
