--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -37,8 +37,8 @@ development_status:
   # Epic 1: Project Foundation & Deployment Pipeline
   epic-1: contexted
   1-1-initialize-project-repositories-and-core-structure: drafted
-  1-2-configure-frontend-development-environment: backlog
-  1-3-configure-backend-development-environment: backlog
+  1-2-configure-frontend-development-environment: drafted
+  1-3-configure-backend-development-environment: drafted
   1-4-implement-basic-ci-cd-for-frontend-vercel: backlog
   1-5-implement-basic-ci-cd-for-backend-railway: backlog
   1-6-set-up-supabase-project-and-connect-to-backend: backlog
