--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -39,41 +39,41 @@ development_status:
   1-1-initialize-project-repositories-and-core-structure: drafted
   1-2-configure-frontend-development-environment: drafted
   1-3-configure-backend-development-environment: drafted
-  1-4-implement-basic-ci-cd-for-frontend-vercel: backlog
-  1-5-implement-basic-ci-cd-for-backend-railway: backlog
-  1-6-set-up-supabase-project-and-connect-to-backend: backlog
-  1-7-set-up-chromadb-vector-store: backlog
+  1-4-implement-basic-ci-cd-for-frontend-vercel: drafted
+  1-5-implement-basic-ci-cd-for-backend-railway: drafted
+  1-6-set-up-supabase-project-and-connect-to-backend: drafted
+  1-7-set-up-chromadb-vector-store: drafted
   epic-1-retrospective: optional
 
   # Epic 2: Core Conversational Experience & RAG Pipeline
   epic-2: contexted
-  2-1-implement-documentation-ingestion-pipeline: backlog
-  2-2-a-implement-core-chat-interface: backlog
-  2-2-b-implement-desktop-three-column-responsive-layout: backlog
-  2-2-c-implement-mobile-tabbed-interface-layout: backlog
-  2-3-implement-pydantic-ai-rag-pipeline-in-backend: backlog
-  2-4-connect-frontend-chat-to-backend-api: backlog
-  2-5-display-source-citations-in-chat-ui: backlog
+  2-1-implement-documentation-ingestion-pipeline: drafted
+  2-2-a-implement-core-chat-interface: drafted
+  2-2-b-implement-desktop-three-column-responsive-layout: drafted
+  2-2-c-implement-mobile-tabbed-interface-layout: drafted
+  2-3-implement-pydantic-ai-rag-pipeline-in-backend: drafted
+  2-4-connect-frontend-chat-to-backend-api: drafted
+  2-5-display-source-citations-in-chat-ui: drafted
   epic-2-retrospective: optional
 
   # Epic 3: User Context & Personalization
   epic-3: contexted
-  3-1-implement-role-selection-ui: backlog
-  3-2-pass-user-role-to-backend: backlog
-  3-3-incorporate-user-role-into-rag-prompt: backlog
+  3-1-implement-role-selection-ui: drafted
+  3-2-pass-user-role-to-backend: drafted
+  3-3-incorporate-user-role-into-rag-prompt: drafted
   epic-3-retrospective: optional
 
   # Epic 4: Robustness, Reliability & Feedback
   epic-4: contexted
-  4-1-implement-automatic-fallback-mechanism: backlog
-  4-2-develop-user-feedback-mechanism-thumbs-up-down: backlog
-  4-3-implement-ambiguous-query-suggestion: backlog
+  4-1-implement-automatic-fallback-mechanism: drafted
+  4-2-develop-user-feedback-mechanism-thumbs-up-down: drafted
+  4-3-implement-ambiguous-query-suggestion: drafted
   epic-4-retrospective: optional
 
   # Epic 5: Production Readiness & Accessibility
   epic-5: contexted
-  5-1-implement-api-rate-limiting: backlog
-  5-2-ensure-wcag-2-1-aa-compliance-for-frontend: backlog
-  5-3-implement-comprehensive-logging-and-monitoring: backlog
-  5-4-conduct-final-end-to-end-testing: backlog
+  5-1-implement-api-rate-limiting: drafted
+  5-2-ensure-wcag-2-1-aa-compliance-for-frontend: drafted
+  5-3-implement-comprehensive-logging-and-monitoring: drafted
+  5-4-conduct-final-end-to-end-testing: drafted
   epic-5-retrospective: optional
