--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -36,13 +36,13 @@ story_location: "docs/sprint-artifacts"
 development_status:
   # Epic 1: Project Foundation & Deployment Pipeline
   epic-1: contexted
-  1-1-initialize-project-repositories-and-core-structure: drafted
-  1-2-configure-frontend-development-environment: drafted
-  1-3-configure-backend-development-environment: drafted
-  1-4-implement-basic-ci-cd-for-frontend-vercel: drafted
-  1-5-implement-basic-ci-cd-for-backend-railway: drafted
-  1-6-set-up-supabase-project-and-connect-to-backend: drafted
-  1-7-set-up-chromadb-vector-store: drafted
+  1-1-initialize-project-repositories-and-core-structure: ready-for-dev
+  1-2-configure-frontend-development-environment: ready-for-dev
+  1-3-configure-backend-development-environment: ready-for-dev
+  1-4-implement-basic-ci-cd-for-frontend-vercel: ready-for-dev
+  1-5-implement-basic-ci-cd-for-backend-railway: ready-for-dev
+  1-6-set-up-supabase-project-and-connect-to-backend: ready-for-dev
+  1-7-set-up-chromadb-vector-store: ready-for-dev
   epic-1-retrospective: optional
 
   # Epic 2: Core Conversational Experience & RAG Pipeline
