--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -38,7 +38,7 @@ development_status:
     epic-1: contexted
     1-1-initialize-project-repositories-and-core-structure: done
     1-2-configure-frontend-development-environment: done
-    1-3-configure-backend-development-environment: ready-for-dev
+    1-3-configure-backend-development-environment: done
     1-4-implement-basic-ci-cd-for-frontend-vercel: ready-for-dev
     1-5-implement-basic-ci-cd-for-backend-railway: ready-for-dev
     1-6-set-up-supabase-project-and-connect-to-backend: ready-for-dev
