--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -39,7 +39,7 @@ development_status:
     1-1-initialize-project-repositories-and-core-structure: done
     1-2-configure-frontend-development-environment: done
     1-3-configure-backend-development-environment: done
-    1-4-implement-basic-ci-cd-for-frontend-vercel: review
+    1-4-implement-basic-ci-cd-for-frontend-vercel: done
     1-5-implement-basic-ci-cd-for-backend-railway: ready-for-dev
     1-6-set-up-supabase-project-and-connect-to-backend: ready-for-dev
     1-7-set-up-chromadb-vector-store: ready-for-dev
