--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "sqlalchemy",
     "asyncpg",
     "python-multipart",
-    "pydantic-ai"
+    "pydantic-ai",
+    "pydantic-settings (>=2.12.0,<3.0.0)",
+    "python-dotenv (>=1.2.1,<2.0.0)",
 ]
 
 [tool.poetry]
@@ -26,5 +28,6 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "pytest (>=9.0.2,<10.0.0)",
-    "httpx (>=0.28.1,<0.29.0)"
+    "httpx (>=0.28.1,<0.29.0)",
+    "pytest-asyncio (>=1.3.0,<2.0.0)"
 ]
