--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -41,7 +41,7 @@ development_status:
     1-3-configure-backend-development-environment: done
     1-4-implement-basic-ci-cd-for-frontend-vercel: done
     1-5-implement-basic-ci-cd-for-backend-railway: done
-    1-6-set-up-supabase-project-and-connect-to-backend: review
+    1-6-set-up-supabase-project-and-connect-to-backend: done
     1-7-set-up-chromadb-vector-store: ready-for-dev
     epic-1-retrospective: optional
 
