--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,11 @@ dependencies = [
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "chromadb",
+    "beautifulsoup4",
+    "httpx",
+    "langchain-text-splitters",
+    "langchain-google-genai",
+    "greenlet",
 ]
 
 [tool.poetry]
@@ -29,6 +34,5 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "pytest (>=9.0.2,<10.0.0)",
-    "httpx (>=0.28.1,<0.29.0)",
     "pytest-asyncio (>=1.3.0,<2.0.0)"
 ]
