--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,15 +13,16 @@ dependencies = [
     "sqlalchemy",
     "asyncpg",
     "python-multipart",
-    "pydantic-ai",
+    "pydantic-ai == 0.0.19",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "chromadb",
     "beautifulsoup4",
     "httpx",
     "langchain-text-splitters",
-    "langchain-google-genai",
+    "google-generativeai (>=0.3.1,<1.0.0)",
     "greenlet",
+    "logfire (>=4.16.0,<5.0.0)",
 ]
 
 [tool.poetry]
@@ -34,5 +35,6 @@ build-backend = "poetry.core.masonry.api"
 [dependency-groups]
 dev = [
     "pytest (>=9.0.2,<10.0.0)",
-    "pytest-asyncio (>=1.3.0,<2.0.0)"
+    "pytest-asyncio (>=1.3.0,<2.0.0)",
+    "aiosqlite (>=0.21.0,<0.22.0)"
 ]
