--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -1,13 +1,7 @@
 # Workflow Status Template
-# This tracks progress through BMM methodology phases
-# Phase 3/4 (Implementation) is tracked separately in sprint-status.yaml
 
-# generated: Wednesday, 12 November 2025
-# project: ibe160
-# project_type: software
-# selected_track: method
-# field_type: greenfield
-# workflow_path: method-greenfield.yaml
+# This tracks progress through BMM methodology Analysis, Planning, and Solutioning phases.
+# Implementation phase is tracked separately in sprint-status.yaml
 
 # STATUS DEFINITIONS:
 # ==================
@@ -21,30 +15,10 @@
 #   - {file-path}: File created/found (e.g., "docs/product-brief.md")
 #   - skipped: Optional/conditional workflow that was skipped
 
-generated: "Wednesday, 12 November 2025"
+generated: "Friday, December 12, 2025"
 project: "ibe160"
-project_type: "software"
-selected_track: "method"
-field_type: "greenfield"
-project_level: 3
-workflow_path: "method-greenfield.yaml"
-
-workflow_status:
-    # Phase 0: Discovery (Optional)
-    brainstorm-project: docs/brainstorming-session-results-Wednesday, 12 November 2025.md
-    research: docs/research/research-technical-Wednesday, 12 November 2025.md
-    product-brief: docs/product-brief-HMSREG-Documentation-Chatbot-Saturday, 15 November 2025.md
-
-    # Phase 1: Planning
-    prd: docs/PRD.md
-    validate-prd: docs/validation-report-20251115T120000Z.md
-    create-design: docs/ux-design-specification.md
-
-    # Phase 2: Solutioning
-    create-architecture: docs/architecture.md
-    create-epics-and-stories: docs/epics.md
-    validate-architecture: docs/validation-reports/validation-report-architecture-20251207-corrected.md
-    implementation-readiness: docs/implementation-readiness-report-Sunday, 7 December 2025.md
-
-    # Phase 3: Implementation
-    sprint-planning: docs/sprint-artifacts/sprint-status.yaml
+project_type: "{{project_type}}"
+selected_track: "{{selected_track}}"
+field_type: "{{field_type}}"
+workflow_path: "{{workflow_path_file}}"
+workflow_status: "{{workflow_items}}"
