--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -48,18 +48,18 @@ development_status:
 
     # Epic 2: Core Conversational Experience & RAG Pipeline
     epic-2: contexted
-    2-1-implement-documentation-ingestion-pipeline: review
-    2-2-a-implement-core-chat-interface: ready-for-dev
-    2-2-b-implement-desktop-three-column-responsive-layout: ready-for-dev
-    2-2-c-implement-mobile-tabbed-interface-layout: ready-for-dev
-    2-3-implement-pydantic-ai-rag-pipeline-in-backend: ready-for-dev
-    2-4-connect-frontend-chat-to-backend-api: ready-for-dev
-    2-5-display-source-citations-in-chat-ui: ready-for-dev
+    2-1-implement-documentation-ingestion-pipeline: done
+    2-2-a-implement-core-chat-interface: done
+    2-2-b-implement-desktop-three-column-responsive-layout: done
+    2-2-c-implement-mobile-tabbed-interface-layout: done
+    2-3-implement-pydantic-ai-rag-pipeline-in-backend: done
+    2-4-connect-frontend-chat-to-backend-api: done
+    2-5-display-source-citations-in-chat-ui: done
     epic-2-retrospective: optional
 
     # Epic 3: User Context & Personalization
     epic-3: contexted
-    3-1-implement-role-selection-ui: ready-for-dev
+    3-1-implement-role-selection-ui: done
     3-2-pass-user-role-to-backend: ready-for-dev
     3-3-incorporate-user-role-into-rag-prompt: ready-for-dev
     epic-3-retrospective: optional
