--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,9 @@ dependencies = [
 [tool.poetry]
 packages = [{include = "app"}]
 
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
