--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
     "asyncpg",
     "psycopg2-binary",
     "python-multipart",
-    "pydantic-ai == 0.0.19",
+    "pydantic-ai",
     "pydantic-settings (>=2.12.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "chromadb",
