--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "google-generativeai (>=0.3.1,<1.0.0)",
     "greenlet",
     "logfire (>=4.16.0,<5.0.0)",
+    "playwright (>=1.40.0,<2.0.0)",
 ]
 
 [tool.poetry]
