--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "OllieMH",email = "olivermh99@hotmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi",
     "uvicorn[standard]",
@@ -25,6 +25,7 @@ dependencies = [
     "greenlet",
     "logfire (>=4.16.0,<5.0.0)",
     "playwright (>=1.40.0,<2.0.0)",
+    "fastapi-limiter~=0.1.5",
 ]
 
 [tool.poetry]
