--- a/docs/bmm-workflow-status.yaml
+++ b/docs/bmm-workflow-status.yaml
@@ -17,8 +17,20 @@
 
 generated: "Friday, December 12, 2025"
 project: "ibe160"
-project_type: "{{project_type}}"
-selected_track: "{{selected_track}}"
-field_type: "{{field_type}}"
-workflow_path: "{{workflow_path_file}}"
-workflow_status: "{{workflow_items}}"
+project_type: "HMSREG Documentation Chatbot"
+selected_track: "BMM"
+field_type: "AI/ML"
+workflow_path: "docs/bmm-workflow-status.yaml"
+workflow_status:
+  - phase: "Fase 0: Research & Planning"
+    status: "COMPLETE"
+  - phase: "Fase 1: User Experience (UX) Design"
+    status: "COMPLETE"
+  - phase: "Fase 2: Technical Architecture & Setup"
+    status: "COMPLETE"
+  - phase: "Fase 3: Solutioning"
+    status: "IN_PROGRESS"
+  - phase: "Fase 4: Development & Integration"
+    status: "NOT_STARTED"
+  - phase: "Fase 5: Testing & Deployment"
+    status: "NOT_STARTED"
