--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
     "node-fetch": "^3.3.2",
