--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "jest-axe": "^10.0.0",
     "lucide-react": "^0.560.0",
     "next": "16.0.8",
+    "next-intl": "^4.6.0",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-markdown": "^10.1.0",
